--- a/zadani/hardcore-2020-mode/index.html
+++ b/zadani/hardcore-2020-mode/index.html
@@ -8,16 +8,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="hlavicka">
-        <div class="hlava prvni">
-            <div class="vlastnost jedna">Super appka</div>
-            <div class="vlastnost dve">Boží funkce</div>
-        </div>
-        <div class="hlava druha">
-            <div class="vlastnost tri">Úžasný design</div>
-            <div class="vlastnost ctyri">Zdarma ke stažení</div>
-        </div>
-    </div>
+        <ul class="hlavicka">
+            <li class="vlastnost jedna">Super appka</li>
+            <li class="vlastnost dve">Úžasný design</li>
+            <li class="vlastnost tri">Boží funkce</li>
+            <li class="vlastnost ctyri">Zdarma ke stažení</li>
+        </ul>
     <div class="hlavni">
         <div class="levy">
         <h1>Super Appka</h1>
@@ -34,17 +30,17 @@
     <div class="textova cast">
         <div class="cestuj">
             <h2>Cestuj po světě</h2>
-            <img src="images/letadlo.svg">
+            <img class="bublina" src="images/letadlo.svg">
             <div class="cestuj text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis accusantium inventore, ab labore rem velit ratione eveniet maiores possimus voluptatem repellat magni aliquam officia, doloremque in numquam, eligendi necessitatibus? Corrupti.</div>
         </div>
         <div class="chatuj">
             <h2>Chatuj s přáteli</h2>
-            <img src="images/bubliny.svg">
+            <img class="bublina" src="images/bubliny.svg">
             <div class="chatuj text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos, accusamus laudantium? Iure dignissimos assumenda voluptatum? Nostrum tempora, quas officiis dolore impedit corrupti earum fuga temporibus doloribus? Totam provident officiis assumenda.</div>
         </div>
         <div class="zazij">
             <h2>Zažij dobrodružství</h2>
-            <img src="images/mapa.svg">
+            <img class="bublina" src="images/mapa.svg">
             <div class="zazij text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos, accusamus laudantium? Iure dignissimos assumenda voluptatum? Nostrum tempora, quas officiis dolore impedit corrupti earum fuga temporibus doloribus? Totam provident officiis assumenda.</div>
         </div>
     </div>
