--- a/zadani/hardcore-2020-mode/index.html
+++ b/zadani/hardcore-2020-mode/index.html
@@ -9,38 +9,38 @@
 </head>
 <body>
         <ul class="hlavicka">
-            <li class="vlastnost jedna">Super appka</li>
-            <li class="vlastnost dve">Úžasný design</li>
-            <li class="vlastnost tri">Boží funkce</li>
-            <li class="vlastnost ctyri">Zdarma ke stažení</li>
+            <li class="vlastnost">Super appka</li>
+            <li class="vlastnost">Úžasný design</li>
+            <li class="vlastnost">Boží funkce</li>
+            <li class="vlastnost">Zdarma ke stažení</li>
         </ul>
     <div class="hlavni">
         <div class="levy">
         <h1>Super Appka</h1>
         <div class="motto">Úžasná mobilní aplikace, která ti změní život.</div>
         <ul>
-            <li class="stahuj"><a href="https://www.stahuj.cz" target="_blank">Stáhnout zdarma</a></li><br>
-            <li class="info"><a href="https://www.wikipedia.org" target="_blank">Více informací</a></li>
+            <li class="tlacitko stahuj"><a href="https://www.stahuj.cz" target="_blank">Stáhnout zdarma</a></li><br>
+            <li class="tlacitko"><a href="https://www.wikipedia.org" target="_blank">Více informací</a></li>
         </ul>
         </div>
         <div class="pravy">
-        <img class="telefon" src="images/telefon.png">
+        <img class="telefon" src="images/telefon.png" alt="Telefon v ruce"> 
         </div>
     </div>
     <div class="textova cast">
-        <div class="cestuj">
-            <h2>Cestuj po světě</h2>
-            <img class="bublina" src="images/letadlo.svg">
+        <div class="zij">
+            <h2 class="nadpis">Cestuj po světě</h2>
+            <img class="bublina" src="images/letadlo.svg" alt="Letadlo">
             <div class="cestuj text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis accusantium inventore, ab labore rem velit ratione eveniet maiores possimus voluptatem repellat magni aliquam officia, doloremque in numquam, eligendi necessitatibus? Corrupti.</div>
         </div>
-        <div class="chatuj">
-            <h2>Chatuj s přáteli</h2>
-            <img class="bublina" src="images/bubliny.svg">
+        <div class="zij">
+            <h2 class="nadpis">Chatuj s přáteli</h2>
+            <img class="bublina" src="images/bubliny.svg" alt="Chatovací bubliny">
             <div class="chatuj text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos, accusamus laudantium? Iure dignissimos assumenda voluptatum? Nostrum tempora, quas officiis dolore impedit corrupti earum fuga temporibus doloribus? Totam provident officiis assumenda.</div>
         </div>
-        <div class="zazij">
-            <h2>Zažij dobrodružství</h2>
-            <img class="bublina" src="images/mapa.svg">
+        <div class="zij">
+            <h2 class="nadpis">Zažij dobrodružství</h2>
+            <img class="bublina" src="images/mapa.svg" alt="Mapa">
             <div class="zazij text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos, accusamus laudantium? Iure dignissimos assumenda voluptatum? Nostrum tempora, quas officiis dolore impedit corrupti earum fuga temporibus doloribus? Totam provident officiis assumenda.</div>
         </div>
     </div>
